--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,11 @@
     "require": {
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
+        "irazasyed/telegram-bot-sdk": "^2.0",
         "laravel/framework": "5.7.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "predis/predis": "^1.1",
+        "pusher/pusher-php-server": "^4.0"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
